resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-demo-svc
  namespace: webhook-demo
  labels:
    app: webhook-demo
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: webhook-demo
