resources/validating-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-demo-cfg
  labels:
    app: webhook-demo
webhooks:
  - name: pod-validating-admission.webhook.godx.com
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
          - services
        scope: "Namespaced"
      - apiGroups:
        - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
        scope: "Namespaced"
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        namespace: webhook-demo
        name: webhook-demo-svc
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeU1Ea3dPREUwTVRnMU9Gb1hEVE15TURrd05URTBNVGcxT0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0xrCkdHSzVUU282Uno0a0RMMDlkK2xscHkvTWgzTWx2OW4xQkhxdUo2OHFKY1hUOFB3OEFMY2p5MkNpMXY4dm81VncKc1AyVVJHWmhaVExJSEJTU29oMldsNjZvNThXRDdjZWdjcjNCRDIwWm9DbDZoR3FPZTVOTVA5MTNPNWppaHpLSAptMngrbmRNSmsy [...]
    sideEffects: None
